--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -50,7 +50,7 @@
   <h5 class="font-semibold">
     Due Today<span
       style="display: inline"
-      id="count-overdue"
+      id="count-due-today"
       class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
       >2</span
     >
@@ -131,7 +131,7 @@
   <h5 class="font-semibold">
     Due Later<span
       style="display: inline"
-      id="count-overdue"
+      id="count-due-later"
       class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
       >2</span
     >
