--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,13 +1,11 @@
 <div>
-  <h5 class="font-semibold">
-    Overdue
-    <span
-      style="display: inline"
-      id="count-overdue"
-      class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
-      >1</span
-    >
-  </h5>
+  <h5 class="font-semibold">Overdue</h5>
+  <span
+    style="display: inline"
+    id="count-overdue"
+    class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
+    >1</span
+  >
 
   <ul class="list-none">
     <li class="Todo-item">
@@ -47,14 +45,14 @@
     </li>
   </ul>
 
-  <h5 class="font-semibold">
-    Due Today<span
-      style="display: inline"
-      id="count-due-today"
-      class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
-      >2</span
-    >
-  </h5>
+  <h5 class="font-semibold">Due Today</h5>
+  <span
+    style="display: inline"
+    id="count-due-today"
+    class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
+    >2</span
+  >
+
   <ul class="list-none">
     <li class="Todo-item">
       <div
@@ -128,14 +126,14 @@
     </li>
   </ul>
 
-  <h5 class="font-semibold">
-    Due Later<span
-      style="display: inline"
-      id="count-due-later"
-      class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
-      >2</span
-    >
-  </h5>
+  <h5 class="font-semibold">Due Later</h5>
+  <span
+    style="display: inline"
+    id="count-due-later"
+    class="bg-gray-300 text-black px-3 py-1 font-medium ml-2 mb-2 rounded"
+    >2</span
+  >
+
   <ul class="list-none">
     <li class="Todo-item">
       <div
