--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,8 +1,8 @@
 body {
-    background-color:white;
-    font-family:'Times New Roman', Times, serif;
-  }
-  
-.Todo-item:hover .trash-icon {
-  display:block;
+  background-color: rgb(245, 197, 125);
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.Todo-Item:hover .trash-icon {
+  display: block;
 }
