--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="<%= csrfToken %>">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Todo App</title>
+    <title>Suyog Todo App</title>
     <script>
         var token = document.querySelector("meta[name='csrf-token']").getAttribute("content");
         const updateTodo = (id) => {
